-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.9.0, Lustre 2.10.0, Lustre 2.10.1, Lustre 2.11.0
-
autotest and manual testing
-
3
-
9223372036854775807
lctl set_param -n ldlm.namespaces.*$1*.lru_size=clear fails with error message
error: set_param: setting /proc/fs/lustre/ldlm/namespaces/lustre-OST0000-osc-ffff880077f04000/lru_size=clear: Invalid argument
I've seen this error message in the test_log for a few sanity tests. The error does not seem to make the test fail (should it?) and the error is not consistent meaning that a test could hit the error on one test run and not experience the error the next.
Here are a few instances of this error I've come across:
sanity test_127a at https://testing.hpdd.intel.com/test_sets/2f35cef8-d8c8-11e5-83e2-5254006e85c2
sanity test_241 hits this a little more regularly https://testing.hpdd.intel.com/sub_tests/79078936-d8e1-11e5-83e2-5254006e85c2.
The error comes from a call to 'cancel_lru_locks osc'. From tests/test-framework.sh, we see
cancel_lru_locks() {
#$LCTL mark "cancel_lru_locks $1 start"
$LCTL set_param -n ldlm.namespaces.*$1*.lru_size=clear
$LCTL get_param ldlm.namespaces.*$1*.lock_unused_count | grep -v '=0'
#$LCTL mark "cancel_lru_locks $1 stop"
It's not clear what is causing this error. Since this error does not cause the test to fail, it's hard to find other occurrences of this error and when it first started.
- is related to
-
LU-7437 "lctl list_param -R" can't list the parameters recursively
-
- Resolved
-
-
LU-7796 "lctl set_param jobid_var" should return error about missing value
-
- Resolved
-
-
LU-9438 sanity-lfsck test_17: (1.2) f1 (wrong) size should be 1048576, but got
-
- Resolved
-
-
LU-8276 Make lru clear always discard read lock pages
-
- Resolved
-
- mentioned in
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...